src/sections/2-AboutMe/AboutMe.module.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 80%;
  margin: 0 auto;
  padding-top: 5rem;
  padding-bottom: 4rem;
  gap: 2rem;
  min-height: 660px;
  overflow: hidden;
}

.subContainer {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
  text-align: center;
  width: 300px;
}

.button {
  width: fit-content;
  margin-top: 1rem;
  padding: 0.5rem 1rem;
  font-size: 1rem;
}

.text {
  max-width: 80%;
  font-size: 1rem;
  line-height: 1.5;
}

.separator {
  width: 100%;
  height: 1px;
  margin: 2rem 0;
}

.image {
  border-top-right-radius: 50px;
  border-bottom-left-radius: 50px;
  opacity: 0;
  transform: translateY(100px);
  transition: transform 1s ease-out, opacity 1s ease-out;
}

.image.visible {
  opacity: 1;
  transform: translateY(0);
}

@media (max-width: 768px) {
  .image {
    width: 70%;
    height: auto;
    max-height: 400px;
    object-fit: contain;
  }
}

@media (min-width: 768px) {
  .image {
    width: auto;
    height: 550px;
  }

  .container {
    flex-direction: row;
    justify-content: space-between;
    gap: 4rem;
  }

  .subContainer {
    align-items: flex-start;
    text-align: left;
    width: 50%;
  }

  .text {
    font-size: 1.1rem;
  }

  .image {
    max-width: 40%;
  }
}

